--- a/cv.html
+++ b/cv.html
@@ -151,7 +151,150 @@
             </div>
 
         </section>
+        <section id="academic-research">
+            <h2>Academic Research Experience</h2>
 
+            <!-- UCSD ProtoLab / Design Lab -->
+            <div class="research-item">
+                <h3>University of California, San Diego <span class="location">San Diego, CA</span></h3>
+                <p class="position">
+                    <a href="https://d4sd2024.ucsd.edu/">Design for San Diego (D4SD) & ProtoLab Research Assistant</a>,
+                    UCSD Design Lab
+                </p>
+                <p class="date">Nov. 2024 — Present</p>
+                <a href="https://spdow.ucsd.edu/">Mentor: Prof. Steven Dow</a>
+
+                <p class="description">
+                    Work with Prof. Steven Dow and lab members to study the role of AI in design collaboration, focusing
+                    on how
+                    AI-powered “dimensional scaffolding” supports both divergent exploration and convergent
+                    optimization.
+                </p>
+                <p class="description">
+                    Designed and conducted a pilot study comparing static-image conditions with interactive
+                    visualization
+                    conditions (t-SNE maps, tables, and text) to evaluate their impact on team design collaboration.
+                </p>
+                <p class="description">
+                    Performed thematic analysis on study results and found that interactive AI tools can improve
+                    collaboration
+                    efficiency and shared understanding in early-stage design.
+                </p>
+            </div>
+
+            <!-- UCI INsite -->
+            <div class="research-item">
+                <h3>University of California, Irvine <span class="location">Irvine, CA</span></h3>
+                <p class="position">
+                    <a
+                        href="https://docs.google.com/presentation/d/1FwsP9Hcv3w_6Mi_2hffRKxGUDm9jCf6epaAJN-iBas4/edit?usp=sharing">
+                        Summer Research Intern
+                    </a>, UCI INsite
+                </p>
+                <p class="date">June. 2024 — Sept. 2024</p>
+                <a href="https://www.stacybranham.com/">Mentor: Prof. Stacy Branham</a>
+
+                <p class="description">
+                    Collaborated with Prof. Stacy Branham and 10+ interns to study accessibility issues in the UCI ICS
+                    system,
+                    with a focus on ADA Title II compliance in higher education.
+                </p>
+                <p class="description">
+                    Coordinated weekly team meetings and led slide preparation, including a detailed legal analysis of
+                    ADA Title II and its implications for university digital systems.
+                </p>
+                <p class="description">
+                    Conducted a literature review and audit of accessibility resources on the ICS website, identifying
+                    issues
+                    such as insufficient color contrast and missing alt-text in faculty-uploaded slides.
+                </p>
+                <p class="description">
+                    Proposed actionable solutions (e.g., faculty accessibility training programs) and presented them to
+                    the
+                    UCI ICS Board in the final project presentation.
+                </p>
+            </div>
+
+            <!-- CityU HCIX 2024 -->
+            <div class="research-item">
+                <h3>City University of Hong Kong <span class="location">Hong Kong, CN</span></h3>
+                <p class="position">
+                    <a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Research Assistant,</a> Studio for Narrative Space
+                </p>
+                <p class="date">June. 2024 — Sept. 2024</p>
+                <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Mentor: Dr. Ray LC</a>
+
+                <p class="description">
+                    Led a 3-person research team to study sustainability awareness through interactive narrative and
+                    gameplay.
+                    This work was published at CHI 2025.
+                </p>
+                <p class="description">
+                    Developed EchoEcho, a multimodal GPT-based sustainability game using React (frontend) and Express
+                    (backend).
+                </p>
+                <p class="description">
+                    Conducted paired t-tests, Wilcoxon signed-rank tests, and thematic analysis on pre- and post-survey
+                    data
+                    to evaluate behavioral and attitudinal changes.
+                </p>
+                <p class="description">
+                    Wrote the paper’s introduction, background, design mechanism, and conclusion sections, and created
+                    process figures in Figma.
+                </p>
+            </div>
+
+            <!-- CityU HCIX 2023 -->
+            <div class="research-item">
+                <h3>City University of Hong Kong <span class="location">Hong Kong, CN</span></h3>
+                <p class="position"><a href="https://recfro.github.io/eternagram/">HCIX Summer Research Program,</a>
+                    Studio For Narrative Space</p>
+
+                <p class="date">June. 2023 — Sept. 2023</p>
+
+                <p class="description">
+                    Designed, developed, and evaluated Eternagram, an AI chatbot game for studying climate change
+                    attitudes.
+                    The work was published at CHI 2024.
+                </p>
+                <p class="description">
+                    Implemented Retrieval-Augmented Generation (RAG) and few-shot prompting for context-aware dialogue.
+                </p>
+                <p class="description">
+                    Designed surveys, recruited 33 participants, conducted interviews, and performed Spearman
+                    correlation
+                    analysis using SPSS. Wrote the data analysis and results sections of the paper.
+                </p>
+            </div>
+
+            <div class="research-item">
+                <h3>China Jiliang University<span class="location">Hangzhou, CN</span></h3>
+                <p class="position"><a href="./PDF/poster.pdf#page=6.76">Undergraduate Research, </a>Institute of
+                    Computer Technology and Applications </p>
+                <p class="date">Sept. 2022 — May. 2023</p>
+                <p class="mentor"> Dr. Haijun Tao & Dr.Lin Xiang</p>
+                <p class="description">Developed a real-time video analysis framework using Gstreamer and YOLOv5 for
+                    object and person detection, achieving a maximum frame rate of 121 frames per second for RTSP
+                    video streams. </p>
+                <p class="description"> Constructed a dataset by collecting real-time video monitoring and detection
+                    data. </p>
+            </div>
+            <div class="research-item">
+                <h3>Auckland University of Technology<span class="location">Auckland, NZ</span></h3>
+                <p class="position"><a href="./PDF/Final_Brief.pdf">Undergraduate Research, </a>Data Science Research
+                    Centre
+                </p>
+                <p class="date">Sept. 2022 — Dec. 2022</p>
+                <a
+                    href=" https://www.google.com/url?q=https://academics.aut.ac.nz/mahsa.mohaghegh&sa=D&source=apps-viewer-frontend&ust=1728500872758930&usg=AOvVaw3zeqr20VQksqWylsM8XTQc&hl=zh-CN">Mentor:
+                    Dr. Mahsa Mohaghegh</a>
+                <p class="description">Proposed the idea of using Raspberry Pi sensors to develop a robot that could
+                    automatically identify and pick up table tennis balls.</p>
+                <p class="description"> Responsible for research project writing and data analysis.</p>
+            </div>
+        </section>
+
+        <!-- 
         <section id="academic-research">
             <h2>Academic Research Experience</h2>
 
@@ -222,7 +365,7 @@
                     automatically identify and pick up table tennis balls.</p>
                 <p class="description"> Responsible for research project writing and data analysis.</p>
             </div>
-        </section>
+        </section> -->
 
         <section id="industry-research">
             <h2>Industry Experience</h2>
