--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
                     <p class="collaboration-text">
                         I am happy to collaborate or just chat about research, my email is
-                        <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
+                        <a href="/cdn-cgi/l/email-protection#fd8c9487cdcbc8bd889e8e99d3989988"><span
+                                class="__cf_email__"
+                                data-cfemail="1f6e76652f292a5f6a7c6c7b317a7b6a">[email&#160;protected]</span></a>.
                     </p>
                     <div class="research-tags">
                         <span class="tag">🤖 AI for Social Good</span>
@@ -114,6 +116,47 @@
                                 style="width: 20px; height: 20px; border-radius: 4px;">
                         </a> -->
                     </div>
+
+                    <!-- PhD Resources Toggle Button -->
+                    <div class="phd-resources-toggle">
+                        <button id="resources-toggle-btn" class="resources-btn">
+                            <i class="fas fa-book-reader"></i>
+                            PhD Resources
+                            <i class="fas fa-chevron-down" id="chevron-icon"></i>
+                        </button>
+                    </div>
+
+                    <!-- PhD Resources Dropdown -->
+                    <div id="resources-dropdown" class="resources-dropdown hidden">
+                        <div class="resources-compact">
+                            <div class="resource-section">
+                                <h4><i class="fas fa-microscope"></i> Meta-Research</h4>
+                                <a href="https://metrics.stanford.edu/" target="_blank">METRICS (Stanford)</a>
+                                <a href="https://www.cos.io/communities/metascience" target="_blank">Metascience
+                                    Registry</a>
+                                <a href="http://metaresearch.nl/" target="_blank">Tilburg Meta-Research</a>
+                                <a href="https://www.bitss.org/" target="_blank">BITSS (Berkeley)</a>
+                                <a href="https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.2005468"
+                                    target="_blank">Why Meta-Research Matters</a>
+                            </div>
+                            <div class="resource-section">
+                                <h4><i class="fas fa-brain"></i> Metacognition</h4>
+                                <a href="https://tll.mit.edu/teaching-resources/how-people-learn/metacognition/"
+                                    target="_blank">MIT Metacognition</a>
+                                <a href="https://www.sciencedirect.com/topics/neuroscience/metacognition"
+                                    target="_blank">ScienceDirect Overview</a>
+                                <a href="https://link.springer.com/journal/11409" target="_blank">Springer Journal</a>
+                            </div>
+                            <div class="resource-section">
+                                <h4><i class="fas fa-book-open"></i> More Readings</h4>
+                                <a href="https://en.wikipedia.org/wiki/Metascience" target="_blank">Metascience
+                                    (Wiki)</a>
+                                <a href="https://www.science.org/topic/science-of-science" target="_blank">Science of
+                                    Science</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="cta-buttons">
                         <!-- <a href="mailto:qiz065@ucsd.edu" class="btn btn-primary">Email</a>
                         <a href="#" class="btn btn-secondary">Blog</a>
@@ -411,7 +454,6 @@ Designers with Multi-agent System},
         </section>
 
     </main>
-
     <footer>
         <p>Designed and built by Qinshi (Carol) Zhang <i class="fas fa-heart"></i>.</p>
         <div class="footer-links">
