--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 
                     <p class="collaboration-text">
                         I am happy to collaborate or just chat about research, my email is
-                        <a href="/cdn-cgi/l/email-protection#62130b1852545722170111064c070617"><span
-                                class="__cf_email__"
-                                data-cfemail="3e4f57440e080b7e4b5d4d5a105b5a4b">[email&#160;protected]</span></a>.
+                       <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>
                     </p>
                     <div class="research-tags">
                         <span class="tag">🤖 AI for Social Good</span>
