--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qinshi (Carol) Zhang</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- 只保留一个FontAwesome版本 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- 预加载关键CSS -->
+    <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Shadows+Into+Light&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -42,7 +41,7 @@
 
                     <p class="collaboration-text">
                         I am happy to collaborate or just chat about research, my email is
-                       <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>
+                        <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
                     <div class="research-tags">
                         <span class="tag">🤖 AI for Social Good</span>
@@ -462,11 +461,9 @@ Designers with Multi-agent System},
                     class="fas fa-graduation-cap"></i></a>
             <a href="https://x.com/Carol_Zhang1027"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/qinshiz/"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:qiz065@ucsd.edu"><i class="far fa-envelope"></i></a>
+            <a href="/cdn-cgi/l/email-protection#6110081b51575421140212054f04051            <a href="mailto:qiz065@ucsd.edu"><i class="fas fa-envelope"></i></a>
         </div>
-        <p>© 2024 Qinshi (Carol) Zhang</p>
     </footer>
     <script src="style.js"></script>
 </body>
-
 </html>
