--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="tag">🌱 Environmental Behavior Change</span>
                         <span class="tag">🎮 Serious Game Design</span>
                         <span class="tag">📊 NLP & Conversational Agents</span>
-                        <span class="tag">🌐 Web3 & Blockchain</span>
+                        <span class="tag">🌐 World Model</span>
 
                     </div>
 
