--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                         <span class="tag">🌱 Environmental Behavior Change</span>
                         <span class="tag">🎮 Serious Game Design</span>
                         <span class="tag">📊 NLP & Conversational Agents</span>
-                        <span class="tag">🌐 World Model</span>
-
+                        <span class="tag">🌍 World Model</span>
                     </div>
 
                     <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
