--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qinshi (Carol) Zhang</title>
     <!-- 只保留一个FontAwesome版本 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <!-- 预加载关键CSS -->
     <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
@@ -18,7 +19,7 @@
             <h1>Qinshi (Carol) Zhang</h1>
             <div class="profile-content">
                 <div class="profile-text">
-                    </br>
+                    <br>
 
                     <p>Hi, I'm Carol Zhang. I'm currently a Computer Science Master student at the University
                         of California, San Diego (UCSD).
@@ -28,15 +29,15 @@
                             Interaction</strong>.
                         I have designed and developed <strong> conversational agents </strong> leveraging
                         NLP techniques to evaluate and intervene user's environmental attitudes and behaviors.
-                        </br> </br>
-                        I have worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
-                            href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
-                            href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
+                        <br><br>
+                        I have worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at
+                        href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with
+                        href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI'24 and a <a
-                            href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
+                            authored paper</a> published at CHI'24 and a
+                        href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
                         CHI'25.
-                    <p>
+                    </p>
 
 
                     <p class="collaboration-text">
@@ -44,12 +45,12 @@
                         <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
                     <div class="research-tags">
-                        <span class="tag">🤖 AI for Social Good</span>
-                        <span class="tag">💬 Human-AI Interaction</span>
-                        <span class="tag">🌱 Environmental Behavior Change</span>
-                        <span class="tag">🎮 Serious Game Design</span>
-                        <span class="tag">📊 NLP & Conversational Agents</span>
-                        <span class="tag">🌍 World Model</span>
+                        <span class="tag">🤝 AI for Social Good</span>
+                        <span class="tag">👥 Human-AI Interaction</span>
+                        <span class="tag">🌍 Environmental Behavior Change</span>
+                        <span class="tag">🎯 Serious Game Design</span>
+                        <span class="tag">💭 NLP & Conversational Agents</span>
+                        <span class="tag">🗺️ World Model</span>
                     </div>
 
                     <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
@@ -60,10 +61,10 @@
                 <div class="profile-image">
 
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
-                    </br=>
+                    <br>
                     <!-- 加粗 -->
                     <p> <strong>CS Master's Student @ UC San Diego'25 </strong></p>
-                    </br>
+                    <br>
                     <div class="social-links"
                         style="font-size: 24px; display: flex; flex-wrap: wrap; gap: 28px; justify-content: center;">
                         <a href="./cv.html" title="CV"
@@ -79,28 +80,14 @@
                             title="Google Scholar" style="color: #4285f4; text-decoration: none;">
                             <i class="fas fa-graduation-cap"></i>
                         </a>
-                        <a href="https://twitter.com/" class="social-icon">
-                            <i class="fa-brands fa-x-twitter"></i>
-                            X
+                        <a href="https://twitter.com/Carol_Zhang1027" title="X"
+                            style="color: #000; text-decoration: none;">
+                           <i class="fa-brands fa-x-twitter"></i>
                         </a>
-
-
-                        <!-- <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"
-                            style="color: #1DA1F2; text-decoration: none;">
-                            <i class="fab fa-twitter"></i>
-                        </a><a href="https://twitter.com/" class="social-icon">
-                            <i class="fa-brands fa-x-twitter"></i> X
-                        </a> -->
-
-
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"
                             style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <!-- <a href="https://www.instagram.com/caprice_kiwi/" title="Instagram"
-                            style="color: #E1306C; text-decoration: none;">
-                            <i class="fab fa-instagram"></i>
-                        </a> -->
                         <a href="https://t.me/carolzhangzz" title="Telegram"
                             style="color: #0088cc; text-decoration: none;">
                             <i class="fab fa-telegram-plane"></i>
@@ -339,7 +326,7 @@ Designers with Multi-agent System},
                                 <i class="fab fa-github"></i> Code
                             </a>
                             <a href="https://amazon-reviews-2023.github.io/" class="btn btn-sm">
-                                <i class="fas fa-database"></i> Dataset (Amazon Reviews’23)
+                                <i class="fas fa-database"></i> Dataset (Amazon Reviews'23)
                             </a>
                         </div>
                     </div>
@@ -353,13 +340,15 @@ Designers with Multi-agent System},
                         </div>
                         <div class="publication-info">
                             <h3>Design for San Diego 2024</h3>
-                            <p class="venue">Served as Web Dev Lead</p>
+                            <p class="venue">Served as Web Development Lead</p>
+
                             <div class="publication-links">
-                                <a href="https://d4sd2024.ucsd.edu/" class="btn btn-sm">
-                                    <i class="fas fa-link"></i> Visit Website
+                                <a href="https://d4sd2024.ucsd.edu/" class="btn btn-sm btn-outline-secondary">
+                                    <i class="fas fa-users"></i> Our Website
                                 </a>
-                                <a href="https://d4sd2024.ucsd.edu/about/" class="btn btn-sm">
-                                    <i class="fas fa-users"></i> About Our Team
+                                <a href="https://wdc2024.org/design-policy-conference-speakers-tracks/"
+                                    class="btn btn-sm btn-outline-secondary">
+                                    <i class="fas fa-users"></i> Official Program Homepage
                                 </a>
                             </div>
                         </div>
@@ -414,8 +403,12 @@ Designers with Multi-agent System},
                 <div class="news-item">
                     <span class="date">2024.06</span>
                     <div class="news-content">
-                        <p>Starting my internship at <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a>
-                            this July. Excited to contribute to the <a href="https://d4sd.org/">D4SD</a> 2024 program!
+                        <p>
+                            Starting my internship at
+                            <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a>
+                            this July. Excited to contribute to the
+                            <a href="https://wdc2024.org/design-policy-conference-speakers-tracks/">D4SD</a>
+                            2024 program!
                         </p>
                     </div>
                 </div>
@@ -458,11 +451,12 @@ Designers with Multi-agent System},
             <a href="https://github.com/Carolzhangzz"><i class="fab fa-github"></i></a>
             <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao"><i
                     class="fas fa-graduation-cap"></i></a>
-            <a href="https://x.com/Carol_Zhang1027"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/Carol_Zhang1027"><i class="fab fa-x-twitter"></i></a>
             <a href="https://www.linkedin.com/in/qinshiz/"><i class="fab fa-linkedin"></i></a>
-            <a href="/cdn-cgi/l/email-protection#6110081b51575421140212054f04051            <a href="mailto:qiz065@ucsd.edu"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:qiz065@ucsd.edu"><i class="fas fa-envelope"></i></a>
         </div>
     </footer>
     <script src="style.js"></script>
 </body>
+
 </html>
