--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
                         of California, San Diego (UCSD).
                     </p>
 
-                    <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
-                            Interaction</strong>.
-                        I have designed and developed <strong> conversational agents </strong> leveraging
-                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors.
+
+                    <p>
+                        My main research interests focus on <strong>AI for Social Good</strong> and
+                        <strong>Human-AI Interaction</strong>.
+                        I have designed and developed <strong>conversational agents</strong> leveraging
+                        NLP techniques to evaluate and intervene users’ environmental attitudes and behaviors.
                         <br><br>
-                        I have worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at
-                        href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with
-                        href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
-                        <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI'24 and a
-                        href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
-                        CHI'25.
+                        I have worked with
+                        <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at
+                        <a href="https://designlab.ucsd.edu/">UCSD Design Lab</a>.
+                        I also have worked with
+                        <a href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr. Ray LC</a> at HK CityU,
+                        resulting in a
+                        <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first authored paper</a>
+                        published at CHI’24 and a
+                        <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first-authored paper</a>
+                        at CHI’25.
                     </p>
 
 
@@ -82,7 +87,7 @@
                         </a>
                         <a href="https://twitter.com/Carol_Zhang1027" title="X"
                             style="color: #000; text-decoration: none;">
-                           <i class="fa-brands fa-x-twitter"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
                         </a>
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"
                             style="color: #0077B5; text-decoration: none;">
@@ -92,8 +97,6 @@
                             style="color: #0088cc; text-decoration: none;">
                             <i class="fab fa-telegram-plane"></i>
                         </a>
-
-
                         <!-- <a href="https://www.xiaohongshu.com/user/profile/5fb856f80000000001001f7b" title="Xiaohongshu"
                             style="display: inline-flex; align-items: center; text-decoration: none;">
                             <img src="./images/xiaohongshu.svg" alt="Xiaohongshu"
