--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="#" class="nav-logo">Carol Zhang</a>
+            <a href="#" class="nav-logo">Qinshi (Carol) Zhang</a>
             <div class="nav-links">
                 <a href="#about">Home</a>
                 <a href="#publications">Papers</a>
