--- a/cv.html
+++ b/cv.html
@@ -149,6 +149,7 @@
 
         <section id="research-experience">
             <h2 class="section-title">Academic Research Experience</h2>
+            <p style="font-size: 0.95rem; font-style: italic; color: var(--text-muted); margin-bottom: 1.5rem;">(*Detailed descriptions available in the PDF CV)</p>
             <div class="cv-item">
                 <div class="cv-item-main">
                     <h3 class="institution">University of California, San Diego</h3>
