--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
         <section id="publications">
             <h2>Papers</h2>
+            <p style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1.5rem;">Note: * indicates equal contribution; † indicates the corresponding author.</p>
             <div class="publication-container">
                 <div class="publication-item">
                     <div class="pub-date">2025 Aug</div>
