--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qinshi (Carol) Zhang</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦉</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦉</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
@@ -39,7 +40,7 @@
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
                     <p class="profile-status">CS Master's Student @ UC San Diego'25</p>
                 </div>
-                
+
                 <div class="profile-content-text">
                     <p>Hi, I'm Carol Zhang. I'm currently a Computer Science Master student at the University
                         of California, San Diego (UCSD).
@@ -62,10 +63,12 @@
                         <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first-authored paper</a>
                         at CHI’25.
                     </p>
-
-                    <p>
-                        I am happy to collaborate or just chat about research, my email is
-                        <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
+                    Currently, I am actively learning and exploring
+                    <strong>Reinforcement Learning</strong> and
+                    <strong>World Model.</strong>
+                    </p>
+                    I am happy to collaborate or just chat about research, my email is
+                    <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
 
                     <div class="research-tags">
@@ -78,11 +81,12 @@
                     </div>
 
                     <div class="social-links-text">
-                        <a href="https://twitter.com/Carol_Zhang1027">Twitter</a> / 
-                        <a href="./cv.html">CV</a> / 
-                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao">Google Scholar</a> / 
-                        <a href="https://github.com/Carolzhangzz">Github</a> / 
-                        <a href="https://www.linkedin.com/in/qinshiz/">LinkedIn</a> / 
+                        <a href="https://twitter.com/Carol_Zhang1027">Twitter</a> /
+                        <a href="./cv.html">CV</a> /
+                        <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao">Google
+                            Scholar</a> /
+                        <a href="https://github.com/Carolzhangzz">Github</a> /
+                        <a href="https://www.linkedin.com/in/qinshiz/">LinkedIn</a> /
                         <a href="mailto:qiz065@ucsd.edu">Email</a>
                     </div>
 
@@ -97,20 +101,25 @@
                             <div class="resource-section">
                                 <h4>Meta-Research</h4>
                                 <a href="https://metrics.stanford.edu/" target="_blank">METRICS (Stanford)</a>
-                                <a href="https://www.cos.io/communities/metascience" target="_blank">Metascience Registry</a>
+                                <a href="https://www.cos.io/communities/metascience" target="_blank">Metascience
+                                    Registry</a>
                                 <a href="http://metaresearch.nl/" target="_blank">Tilburg Meta-Research</a>
                                 <a href="https://www.bitss.org/" target="_blank">BITSS (Berkeley)</a>
                             </div>
                             <div class="resource-section">
                                 <h4>Metacognition</h4>
-                                <a href="https://tll.mit.edu/teaching-resources/how-people-learn/metacognition/" target="_blank">MIT Metacognition</a>
-                                <a href="https://www.sciencedirect.com/topics/neuroscience/metacognition" target="_blank">ScienceDirect Overview</a>
+                                <a href="https://tll.mit.edu/teaching-resources/how-people-learn/metacognition/"
+                                    target="_blank">MIT Metacognition</a>
+                                <a href="https://www.sciencedirect.com/topics/neuroscience/metacognition"
+                                    target="_blank">ScienceDirect Overview</a>
                                 <a href="https://link.springer.com/journal/11409" target="_blank">Springer Journal</a>
                             </div>
                             <div class="resource-section">
                                 <h4>Readings</h4>
-                                <a href="https://en.wikipedia.org/wiki/Metascience" target="_blank">Metascience (Wiki)</a>
-                                <a href="https://www.science.org/topic/science-of-science" target="_blank">Science of Science</a>
+                                <a href="https://en.wikipedia.org/wiki/Metascience" target="_blank">Metascience
+                                    (Wiki)</a>
+                                <a href="https://www.science.org/topic/science-of-science" target="_blank">Science of
+                                    Science</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +129,8 @@
 
         <section id="publications">
             <h2>Papers</h2>
-            <p style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1.5rem;">Note: * indicates equal contribution; † indicates the corresponding author.</p>
+            <p style="font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1.5rem;">Note: * indicates equal
+                contribution; † indicates the corresponding author.</p>
             <div class="publication-container">
                 <div class="publication-item">
                     <div class="pub-date">2025 Aug</div>
@@ -128,7 +138,8 @@
                         <img src="./images/FD.png" alt="FD Publication">
                     </div>
                     <div class="pub-info">
-                        <h3><a href="./PDF/VLHCC25_FD.pdf">Frontend Diffusion: Empowering Self-Representation of Researchers and Designers with Multi-agent System</a></h3>
+                        <h3><a href="./PDF/VLHCC25_FD.pdf">Frontend Diffusion: Empowering Self-Representation of
+                                Researchers and Designers with Multi-agent System</a></h3>
                         <p class="authors">Zijian Ding, <strong>Qinshi Zhang</strong>, Mohan Chi, Ziyi Wang</p>
                         <p class="venue">IEEE Symposium on Visual Languages and Human-Centric Computing 2025</p>
                         <div class="publication-links">
@@ -155,8 +166,11 @@
                         <img src="./images/Ecoecho.png" alt="EcoEcho Publication">
                     </div>
                     <div class="pub-info">
-                        <h3><a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Can AI Prompt Humans? Multimodal Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability Awareness</a></h3>
-                        <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani Hendra, Ray LC†</p>
+                        <h3><a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Can AI Prompt Humans? Multimodal
+                                Agents Prompt Players' Game Actions and Show Consequences to Raise Sustainability
+                                Awareness</a></h3>
+                        <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani
+                            Hendra, Ray LC†</p>
                         <p class="venue">CHI Conference on Human Factors in Computing Systems 2025</p>
                         <div class="publication-links">
                             <a href="https://ecoecho.duckdns.org/">Demo</a>
@@ -181,8 +195,11 @@
                         <img src="./images/Etergram.png" alt="Etergram Publication">
                     </div>
                     <div class="pub-info">
-                        <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player Attitudes in Alternate Climate Scenarios Through a ChatGPT-Driven Text Adventure</a></h3>
-                        <p class="authors">Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>, Jussi Holopainen, Ray LC†</p>
+                        <h3><a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram: Probing Player
+                                Attitudes in Alternate Climate Scenarios Through a ChatGPT-Driven Text Adventure</a>
+                        </h3>
+                        <p class="authors">Suifang Zhou*, Latisha Besariani Hendra*, <strong>Qinshi Zhang*</strong>,
+                            Jussi Holopainen, Ray LC†</p>
                         <p class="venue">CHI Conference on Human Factors in Computing Systems 2024</p>
                         <div class="publication-links">
                             <a href="https://recfro.github.io/eternagram/">Project</a>
@@ -212,7 +229,8 @@
                         <img src="./images/jupyter.png" alt="jupyter">
                     </div>
                     <div class="pub-info">
-                        <h3><a href="./PDF/notebooks.pdf">Classifying Applications, Structure, and Data Transformations in Jupyter Notebooks</a></h3>
+                        <h3><a href="./PDF/notebooks.pdf">Classifying Applications, Structure, and Data Transformations
+                                in Jupyter Notebooks</a></h3>
                         <p class="authors">Jacob Yim*, Qinshi Zhang*</p>
                         <p class="venue">An Exploratory Study</p>
                         <div class="publication-links">
@@ -228,7 +246,8 @@
                         <img src="./images/multimodal-news.png" alt="Multimodal News RecSys">
                     </div>
                     <div class="pub-info">
-                        <h3><a href="https://github.com/Carolzhangzz/Multimodal-News-RecSys">Multimodal News Recommendation</a></h3>
+                        <h3><a href="https://github.com/Carolzhangzz/Multimodal-News-RecSys">Multimodal News
+                                Recommendation</a></h3>
                         <p class="authors">Qinshi Zhang, et al.</p>
                         <p class="venue">Focus: MMGCN vs. Content-only strategies</p>
                         <div class="publication-links">
@@ -262,19 +281,22 @@
                 <div class="news-item">
                     <span class="date">2025.09</span>
                     <div class="news-content">
-                        I will attend <a href="https://neurips.cc/Conferences/2025">NeurIPS'25</a> (Dec 2–7, San Diego Convention Center).
+                        I will attend <a href="https://neurips.cc/Conferences/2025">NeurIPS'25</a> (Dec 2–7, San Diego
+                        Convention Center).
                     </div>
                 </div>
                 <div class="news-item">
                     <span class="date">2025.08</span>
                     <div class="news-content">
-                        Our paper, <a href="./PDF/VLHCC25_FD.pdf">Frontend Diffusion</a>, has been accepted at IEEE VL/HCC 2025!
+                        Our paper, <a href="./PDF/VLHCC25_FD.pdf">Frontend Diffusion</a>, has been accepted at IEEE
+                        VL/HCC 2025!
                     </div>
                 </div>
                 <div class="news-item">
                     <span class="date">2025.01</span>
                     <div class="news-content">
-                        Our paper, <a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Can AI Prompt Humans</a>, has been fully accepted at CHI 2025!
+                        Our paper, <a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Can AI Prompt Humans</a>,
+                        has been fully accepted at CHI 2025!
                     </div>
                 </div>
                 <div class="news-item">
@@ -292,19 +314,23 @@
                 <div class="news-item">
                     <span class="date">2024.06</span>
                     <div class="news-content">
-                        Starting my internship at <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this July. Excited to contribute to the <a href="https://wdc2024.org/design-policy-conference-speakers-tracks/">D4SD</a> 2024 program!
+                        Starting my internship at <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a> this
+                        July. Excited to contribute to the <a
+                            href="https://wdc2024.org/design-policy-conference-speakers-tracks/">D4SD</a> 2024 program!
                     </div>
                 </div>
                 <div class="news-item">
                     <span class="date">2024.01</span>
                     <div class="news-content">
-                        Serving as a Student Volunteer at <a href="https://chi2024.acm.org/">CHI 2024</a>! See you in Hawai'i!
+                        Serving as a Student Volunteer at <a href="https://chi2024.acm.org/">CHI 2024</a>! See you in
+                        Hawai'i!
                     </div>
                 </div>
                 <div class="news-item">
                     <span class="date">2024.01</span>
                     <div class="news-content">
-                        Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been accepted to <a href="https://chi2024.acm.org/">CHI 2024!</a>.
+                        Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been
+                        accepted to <a href="https://chi2024.acm.org/">CHI 2024!</a>.
                     </div>
                 </div>
                 <div class="news-item">
@@ -316,7 +342,8 @@
                 <div class="news-item">
                     <span class="date">2023.07</span>
                     <div class="news-content">
-                        Starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a> this September!
+                        Starting a research-based program at <a href="https://www.uci.edu/">UC Irvine</a> this
+                        September!
                     </div>
                 </div>
             </div>
@@ -329,7 +356,8 @@
         <div class="footer-links">
             <a href="./cv.html" title="CV"><i class="fas fa-file-alt"></i></a>
             <a href="https://github.com/Carolzhangzz" title="Github"><i class="fab fa-github"></i></a>
-            <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://scholar.google.com/citations?user=Zo0HnLwAAAAJ&hl=zh-CN&oi=ao" title="Google Scholar"><i
+                    class="fas fa-graduation-cap"></i></a>
             <a href="https://twitter.com/Carol_Zhang1027" title="X"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:qiz065@ucsd.edu" title="Email"><i class="fas fa-envelope"></i></a>
