--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first-authored paper</a>
                         at CHI’25.
                     </p>
-                    Currently, I am actively learning and exploring
+                    Currently, I am actively learning 
                     <strong>Reinforcement Learning</strong> and
                     <strong>World Model.</strong>
                     </p>
