--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
                         <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first-authored paper</a>
                         at CHI’25.
                     </p>
-                    Currently, I am actively learning 
-                    <strong>Reinforcement Learning</strong> and
-                    <strong>World Model.</strong>
+                    Currently, I am actively learning
+                    <strong><a
+                            href="https://www.deeplearning.ai/courses/fine-tuning-and-reinforcement-learning-for-llms-intro-to-post-training/">Reinforcement
+                            Learning</a></strong> and
+                    <strong><a href="https://medium.com/@ML-today/world-modeling-the-future-of-ai-ff8703daa220">World
+                            Modeling</a></strong>.
                     </p>
                     I am happy to collaborate or just chat about research, my email is
                     <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
