--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first-authored paper</a>
                         at CHI’25.
                     </p>
-                    Currently, I am actively learning
+                    Recently, I am actively learning
                     <strong><a
                             href="https://www.deeplearning.ai/courses/fine-tuning-and-reinforcement-learning-for-llms-intro-to-post-training/">Reinforcement
                             Learning</a></strong> and
